src/style.css
/* ... */
.shooting_star:nth-child(19) {
  top: calc(50% - 159px);
  left: calc(50% - 256px);
  -webkit-animation-delay: 380ms;
  animation-delay: 380ms;
}
.shooting_star:nth-child(19)::before,
.shooting_star:nth-child(19)::after {
  -webkit-animation-delay: 380ms;
  animation-delay: 380ms;
}
.shooting_star:nth-child(20) {
  top: calc(50% - -129px);
  left: calc(50% - 222px);
  -webkit-animation-delay: 8172ms;
  animation-delay: 8172ms;
}
.shooting_star:nth-child(20)::before,
.shooting_star:nth-child(20)::after {
  -webkit-animation-delay: 8172ms;
  animation-delay: 8172ms;
}

@-webkit-keyframes tail {
  0% {
    width: 0;
  }
  30% {
    width: 100px;
  }
  100% {
    width: 0;
  }
}

@keyframes tail {
  0% {
    width: 0;
  }
  30% {
    width: 100px;
  }
  100% {
    width: 0;
  }
}
@-webkit-keyframes shining {
  0% {
    width: 0;
  }
  50% {
    width: 30px;
  }
  100% {
    width: 0;
  }
}
@keyframes shining {
  0% {
    width: 0;
  }
  50% {
    width: 30px;
  }
  100% {
    width: 0;
  }
}
@-webkit-keyframes shooting {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(300px);
  }
}
@keyframes shooting {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(300px);
  }
}
@-webkit-keyframes sky {
  0% {
    transform: rotate(45deg);
  }
  100% {
    transform: rotate(405deg);
  }
}
@keyframes sky {
  0% {
    transform: rotate(45deg);
  }
  100% {
    transform: rotate(405deg);
  }
}
.bg-parallax {
  height: 100vh;
  width: 100vw;
  top: 0;
  left: 0;
  position: fixed;
  display: block;
  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
  z-index: -100;
}
.global-wrapper {
  margin: var(--spacing-0) auto;
  max-width: var(--maxWidth-wrapper);
  padding: var(--spacing-20) var(--spacing-20);
  background-color: rgba(255, 255, 255, 0);
}

.global-wrapper[data-is-root-path="true"] .bio {
  margin-bottom: var(--spacing-20);
}

.global-header {
  /* margin-top: 25%;
  margin-bottom: 40%; */
}

.main-heading {
  font-size: 6em;
  margin-top: 25%;
  margin-bottom: 40%;
  /* margin-top: 50%;
  margin-bottom: 60%;
  margin-left: 10%; */
}

.post-list-item {
  margin-bottom: var(--spacing-8);
  margin-top: var(--spacing-8);
}

.post-list-item p {
  margin-bottom: var(--spacing-0);
}

.post-list-item h2 {
  font-size: var(--fontSize-4);
  color: var(--color-primary);
  margin-bottom: var(--spacing-2);
  margin-top: var(--spacing-0);
}

.post-list-item header {
  margin-bottom: var(--spacing-4);
}

.header-link-home {
  font-weight: var(--fontWeight-bold);
  font-family: var(--font-heading);
  text-decoration: none;
  font-size: var(--fontSize-2);
}

.bio {
  display: flex;
  margin-bottom: var(--spacing-16);
}

.bio p {
  font-size: var(--fontSize-4);
  margin-bottom: var(--spacing-0);
}

.bio-avatar {
  margin-right: var(--spacing-4);
  margin-bottom: var(--spacing-0);
  min-width: 50px;
  border-radius: 100%;
}

.blog-post header h1 {
  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
}

.blog-post header p {
  font-size: var(--fontSize-2);
  font-family: var(--font-heading);
}

.blog-post-nav ul {
  margin: var(--spacing-0);
}

.gatsby-highlight {
  margin-bottom: var(--spacing-8);
}

/* Media queries */

@media (max-width: 42rem) {
  blockquote {
    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
    margin-left: var(--spacing-0);
  }
  ul,
  ol {
    list-style-position: inside;
  }
}

/* iPhone 4 ----------- */
@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
  .main-heading {
    font-size: 3.5em;
    margin-bottom: 100%;
  }
  .bio p {
    font-size: var(--fontSize-2);
  }
}

@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
  /* Styles */
  .main-heading {
    font-size: 3.5em;
    margin-bottom: 100%;
  }
  .bio p {
    font-size: var(--fontSize-2);
  }
}

/* iPhone 5 ----------- */
@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
  /* Styles */
  .main-heading {
    font-size: 3.5em;
    margin-bottom: 100%;
  }
  .bio p {
    font-size: var(--fontSize-2);
  }
}

@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
  /* Styles */
  .main-heading {
    font-size: 3.5em;
    margin-bottom: 100%;
  }
  .bio p {
    font-size: var(--fontSize-2);
  }
}

/* iPhone 6, 7, 8 ----------- */
@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
  /* Styles */
  .main-heading {
    font-size: 3.5em;
    margin-bottom: 100%;
  }
  .bio p {
    font-size: var(--fontSize-3);
  }
}

@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
  /* Styles */
  .main-heading {
    font-size: 3.5em;
    margin-bottom: 100%;
  }
  .bio p {
    font-size: var(--fontSize-3);
  }
}

/* iPhone 6+, 7+, 8+ ----------- */
@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
  /* Styles */
  .main-heading {
    font-size: 3.5em;
    margin-bottom: 100%;
  }
  .bio p {
    font-size: var(--fontSize-3);
  }
}

@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
  /* Styles */
  .main-heading {
    font-size: 3.5em;
    margin-bottom: 100%;
  }
  .bio p {
    font-size: var(--fontSize-3);
  }
}

